<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color"
        android:icon="@drawable/ic_palette"
        android:title="@string/action_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/line_width"
        android:icon="@drawable/ic_brush"
        android:title="@string/action_line_width"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/print"
        android:icon="@drawable/ic_print"
        android:title="@string/action_print"
        app:showAsAction="always" />

</menu>