<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:padding="16dp"
    android:useDefaultMargins="true">

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/label_alpha" />

    <SeekBar
        android:id="@+id/alphaSeekBar"
        style="@style/BigSeekBar"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/label_red" />

    <SeekBar
        android:id="@+id/redSeekBar"
        style="@style/BigSeekBar"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/label_green" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        style="@style/BigSeekBar"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/label_blue" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        style="@style/BigSeekBar"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <View
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

</GridLayout>